--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,15 @@
 	<name>ssm Maven Webapp</name>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+    <!-- 主要是设置编译时的编码 -->  
+    <!-- 文件拷贝时的编码 -->  
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>  
+        <!-- 编译时的编码 -->  
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>  
+    <!-- 此处及以下省略--> 
+    </properties>
+	
 	<dependencies>
 		<!-- 单元测试 -->
 		<dependency>
@@ -156,6 +163,7 @@
 				<configuration>
 					<path>/</path>
 					<port>8083</port>
+					<uriEncoding>UTF-8</uriEncoding>
 				</configuration>
 			</plugin>
 		</plugins>
